fix(modal): remove overflow scroll from modal overlay
fix width overflow and automatic scrolling after resizing viewport

--- a/packages/forma-36-react-components/src/components/Modal/Modal/Modal.css
+++ b/packages/forma-36-react-components/src/components/Modal/Modal/Modal.css
@@ -27,6 +27,7 @@
   /* prettier-ignore */
   background-color: var(--color-contrast-dark)bf;
   text-align: center;
+  overflow: hidden;
 }
 
 .Modal__overlay--after-open {
